--- a/html/index.css
+++ b/html/index.css
@@ -1,66 +1,3 @@
-/*html, body {
- margin: 0;
- padding: 0;
- }
-
-body {
- background-color: #282c34  ;
- font-family: 'Oswald', sans-serif;
- }
-
- .header {
-   width: 100%;
-   display: flex;
-   justify-content: space-between;
-   border: red solid 2px;
- }
-
- .header a{
-   color : white;
-   text-decoration: none;
-   font-size: 24px;
-   border: blue solid 2px;
- }
-
- .header img{
-   border: blue solid 2px;
- }
-
- .logo {
-   width: 15%;
-   margin: auto;
-   margin-left: 0;
-   border: red solid 2px;
- }
-
- .logo a {
-
- }
-
- .navbar {
-   width: 40%;
-   margin: auto;
-   display: flex;
-   justify-content: space-around;
-   border: red solid 2px;
- }
-
- .navbar div, a {
-   margin-right: 0;
- }
-
- .connexion {
-   width: 15%;
-   margin-top: auto;
-   margin-bottom: auto;
-   margin-right: 0;
-   border: red solid 2px;
- }
-
- .connexion a {
-
- }*/
-
 @import "compass/css3";
 
 body{
@@ -68,9 +5,10 @@ body{
     padding: 0;
     font-family: GeoSansLight, Agency FB, sans-serif;
     font-size: 20px;
-    color: black;
+    color: white;
     position: absolute;
     display: block;
+    background-color: #282c34;
 }
 
 .overlay {
@@ -82,42 +20,46 @@ body{
 }
 
 .header {
-    width: 100%;
+    width: 94%;
     height: auto;
+    margin-left: 3%;
     position: fixed;
     display: flex;
     top: 0;
     justify-content: space-between;
     z-index: 1000;
-    background-color: white;
+    background-color: /*#1B1D22*/#282c34;
+    border-bottom: 1px solid white;
 }
 
-.titres {
+.subtitle1 {
     width: auto;
     height: auto;
-    margin-top: auto;
-    margin-bottom: auto;
-    margin-left: 50px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 30px;
     display: flex;
     /*border: 1px solid blue;*/
 }
 
-.titres div{
+.subtitle1 div{
     margin-top: auto;
     margin-bottom: auto;
+    /*border: 1px solid blue;*/
 }
 
-.titres a{
+.subtitle1 a{
     margin-left: 10px;
+    color: white;
 }
 
-.titres a:hover{
-    color: #98deea;
+.subtitle1 a:hover{
+    color: #7294E9;
     transition: 0.6s;
 }
 
-.prism a, .log-in-animation a {
-    color: black;
+.FreeNote a, .log-in-animation a {
+    color: white;
     text-decoration: none;
     padding: 10px 10px 10px 10px;
     position: relative;
@@ -132,7 +74,7 @@ body{
 div.highlightTextIn a:before
 {
     position: absolute;
-    color: black;
+    color: white;
     top: 0px;
     left: 0px;
     padding: 10px;
@@ -146,7 +88,7 @@ div.highlightTextIn a:before
 div.highlightTextIn a:hover:after
 {
     position: absolute;
-    color: black;
+    color: white;
     top: 0px;
     left: 0px;
     padding: 10px;
@@ -166,7 +108,7 @@ div.highlightTextIn a:hover:before
 /* Highlight text in  */
 div.highlightTextIn a
 {
-    color: rgba(0, 0, 0, 1);
+    color: rgba(255, 255, 255, 1);
 }
 
 div.highlightTextIn a:before
@@ -174,15 +116,40 @@ div.highlightTextIn a:before
     transform: scale(1.6);
 }
 
-.navbar {
+.sign-up {
+    width: auto;
+    height: auto;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    display: flex;
+    /*border: 1px solid blue;*/
+}
+
+.sign-up div{
+    margin-top: auto;
+    margin-bottom: auto;
+    /*border: 1px solid blue;*/
+}
+
+.sign-up a{
+    margin-left: 10px;
+    color: white;
+}
+
+.sign-up a:hover{
+    color: #7294E9;
+    transition: 0.6s;
+}
+
+/*.navbar {
     width: 40%;
     height: 80px;
     margin-top: auto;
     margin-bottom: auto;
     display: flex;
     justify-content: space-around;
-    border-bottom: 1px solid black;
-    /*border: 1px solid red;*/
+    border-bottom: 1px solid white;
+    border: 1px solid red;
 }
 
 .navbar a {
@@ -191,17 +158,17 @@ div.highlightTextIn a:before
     margin: auto;
     font-family: Bebas, GeosansLight, Agency FB;
     font-size: 22px;
-    color: black;
+    color: white;
     text-decoration: none;
     padding: 10px 10px 10px 10px;
     position: relative;
     z-index: 0;
     cursor: pointer;
-    /*border: 1px solid red;*/
+    border: 1px solid red;
 }
 
 .navbar a:hover {
-    color: #98deea;
+    color: #7294E9;
     transition: 0.5s;
 }
 
@@ -212,7 +179,7 @@ div.highlightTextIn a:before
     display: inline;
 }
 
-
+*/
 div.borderXwidth a:before, div.borderXwidth a:after
 {
     position: absolute;
@@ -243,32 +210,55 @@ div.borderXwidth a:hover:before, div.borderXwidth a:hover:after
 }
 
 .log-in {
-    margin-top: auto;
-    margin-bottom: auto;
-    margin-right: 40px;
     width: auto;
     height: auto;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-right: 30px;
     display: flex;
     /*border: 1px solid blue;*/
 }
 
-.log-in .log-in-logo  {
-    width: auto;
-    height: 50px;
+.log-in div{
     margin-top: auto;
     margin-bottom: auto;
-    padding-right: 10px;
-    padding-left: 45px;
-    /*border: 1px solid green;*/
+    /*border: 1px solid blue;*/
 }
 
-.log-in-animation {
-    width: 60px;
-    /*border: 1px solid green;*/
+.log-in a{
+    margin-left: 10px;
+    color: white;
 }
 
-.log-in a:hover  {
-    color: #98deea;
-    transition: 0.5s;
+.log-in a:hover{
+    color: #7294E9;
+    transition: 0.6s;
 }
 
+.description {
+    width: 40%;
+    height: auto;
+    margin-top: 240px;
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
+    /*box-shadow: 2px 2px 1px 1px rgba(255, 255, 255, 0.2);*/
+    /*border: 1px solid white;*/
+}
+
+.description-subtitle {
+    width: auto;
+    text-align: center;
+    font-size: 30px;
+    font-family: Bebas;
+    /*border: 1px solid white;*/
+}
+
+.description-FreeNote, p {
+    margin-top: 20px;
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-bottom: 10px;
+    font-family: calibri;
+    /*border: 1px solid white;*/
+}
