--- a/html/css/index.css
+++ b/html/css/index.css
@@ -9,7 +9,7 @@ body{
     color: white;
     position: absolute;
     display: block;
-    background:url("images/fond.jpg");
+    background:url("../images/fond.jpg");
     height: 100%;
     background-attachment: fixed;
     background-repeat: no-repeat;
