--- a/html/css/login.css
+++ b/html/css/login.css
@@ -17,8 +17,15 @@ body{
     display: none;
 }
 
+
 .span {
     display: none;
+}
+
+.arrow {
+    margin-top: 20px;
+    margin-left: 20px;
+    position: fixed;
 }
 
 .Title {
@@ -145,4 +152,22 @@ h1 {
 }
 .form, p, input {
     margin-left: 5%;
+}
+
+.submit {
+    width: 30%;
+    height: 70px;
+    color: white;
+    font-family: Bebas;
+    font-size: 20px;
+    margin-left: 35%;
+    background-color: #282c34;
+}
+
+.connexion {
+    color: #282c34;
+    font-size: 20px;
+    text-align: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
