--- a/html/css/signup.css
+++ b/html/css/signup.css
@@ -28,14 +28,14 @@ body{
 }
 
 .Title {
-    width: 15%;
+    width: 40%;
     height: auto;
     margin-top: 50px;
     margin-bottom: 10px;
     margin-left: auto;
     margin-right: auto;
     display: flex;
-    /*border: 1px solid blue;*/
+    border: 1px solid blue;
 }
 
 .Title div{
@@ -121,7 +121,6 @@ h1 {
 .container-form {
     width: 35%;
     margin-top: 40px;
-    margin-left: 32.5%;
     margin-bottom: 40px;
     position: relative;
     background-color: white;
@@ -137,9 +136,12 @@ h1 {
     margin-bottom: 40px;
     margin-left: auto;
     margin-right: auto;
-    background-color: #E2E5EC;
     border: white 1px solid;
     border-radius: 8px;
+}
+
+.fond-gris {
+    background-color: #E2E5EC;
 }
 
 .bouton {
@@ -175,4 +177,26 @@ h1 {
 .informations_personnelles p {
     color: #282c34;
     border: red 1px solid;
+}
+
+@media screen and (max-width: 768px)
+{
+
+    .Title img {
+        width: 128px;
+        height: auto;
+    }
+    .FreeNote a {
+        font-size: 100px;
+    }
+
+    .container-form {
+        width: 90%;
+        margin-left: 5%;
+
+    }
+
+    .form {
+        width: 90%;
+    }
 }
