--- a/html/css/index.css
+++ b/html/css/index.css
@@ -5,6 +5,313 @@ body{
     width: 100%;
     margin: 0;
     padding: 0;
+    font-family: Bebas, sans-serif;
+    font-size: 20px;
+    color: white;
+    position: absolute;
+    display: block;
+    background:url("https://i.pinimg.com/originals/09/24/4c/09244c7f7dd4d17b0484370f32db6641.gif");
+    height: 100%;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: cover
+
+}
+
+.overlay {
+    display: none;
+}
+
+.span {
+    display: none;
+}
+
+input:focus {
+    outline: none;
+}
+
+/* Mise en page du header contenant l'en tête du site */
+.header {
+    width: 94%;
+    height: 90px;
+    margin-left: 3%;
+    position: fixed;
+    display: flex;
+    top: 0;
+    justify-content: space-between;
+    background-color: /*#1B1D22*/#101824;
+    border-bottom: 1px solid white;
+}
+
+/* Mise en page du bloc contenant le logo et le titre du site */
+.subtitle1 {
+    width: auto;
+    height: auto;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 30px;
+    display: flex;
+    border: 1px solid blue;
+}
+
+/* Centrage verticale des div du bloc subtitle1 */
+.subtitle1 div{
+    margin-top: auto;
+    margin-bottom: auto;
+    /*border: 1px solid blue;*/
+}
+
+/* Lien du bloc en blanc */
+.subtitle1 a{
+    margin-left: 10px;
+    color: white;
+}
+
+/* Changement de la couleur du lien au passage de la souris */
+.subtitle1 a:hover{
+    color: #2461cc;
+    transition: 0.6s;
+}
+
+.contenu-navbar {
+    width: auto;
+    height: auto;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-right: 30px;
+    display: flex;
+    /*border: 1px solid blue;*/
+}
+
+.contenu-navbar a{
+    margin-left: 10px;
+    color: white;
+}
+
+.contenu-navbar a:hover{
+    color: #2461cc;
+    transition: 0.6s;
+}
+
+.description {
+    width: 500px;
+    height: auto;
+    margin-top: 300px;
+    margin-left: 10%;
+    background-color: #101824;
+    display: flex;
+    flex-direction: column;
+    /*border: 1px solid deeppink;*/
+    border-radius: 5px;
+}
+
+h1 {
+    padding-top: 20px;
+    margin-bottom: 30px;
+    text-align: center;
+    font-size: 28px;
+}
+
+.description-FreeNote {
+    width: 90%;
+    height: auto;
+    margin-left: 5%;
+    margin-bottom: 40px;
+    font-family: calibri;
+    font-size: 18px;
+    color: white;
+    background-color: #080c10;
+    border: 1px solid #2461cc;
+    border-radius: 4px;
+}
+
+.description-FreeNote p{
+    text-align: justify;
+    margin-left: 20px;
+    margin-right: 20px;
+
+}
+
+/* The sidebar menu */
+.sidebar {
+    height: 100%; /* 100% Full-height */
+    width: 0; /* 0 width - change this with JavaScript */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Stay on top */
+    top: 0;
+    right: 0;
+    background-color: #101824;
+    overflow-x: hidden; /* Disable horizontal scroll */
+    padding-top: 60px; /* Place content 60px from the top */
+    transition: 0.5s; /* 0.5 second transition effect to slide in the sidebar */
+}
+
+/* The sidebar links */
+.sidebar a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+}
+
+/* When you mouse over the navigation links, change their color */
+.sidebar a:hover {
+    color: #f1f1f1;
+}
+
+/* Position and style the close button (top right corner) */
+.sidebar .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+}
+
+/* The button used to open the sidebar */
+.openbtn {
+    font-size: 20px;
+    cursor: pointer;
+    margin-top: 11px;
+    margin-right: 10px;
+    background-color: #2461cc;
+    color: white;
+    padding: 5px 10px 5px 10px;
+    border: none;
+    border-radius: 4px;
+}
+
+/* Style page content - use this if you want to push the page content to the right when you open the side navigation */
+#main {
+    width: 200px;
+    height: 60px;
+    top: 20px;
+    right: 20px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    position: absolute;
+    background-color: #101824;
+    border-radius: 4px;
+    transition: margin-right .5s; /* If you want a transition effect */
+}
+
+#main p {
+    width: auto;
+    height: 20px;
+    margin-top: 18px;
+    margin-left: auto;
+    margin-right: auto;
+    /*border: 1px solid red;*/
+}
+
+.container-discussion {
+    width: 70%;
+    margin-top: 0px;
+    margin-left: 10%;
+    /*border: 1px solid deeppink;*/
+}
+
+.discussion {
+    width: auto;
+    height: auto;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    /*border: 1px solid deeppink;*/
+}
+
+.discussion .description {
+    margin-top: 100px;
+    margin-left: 0px;
+}
+
+.Prevnext {
+    width: auto;
+    margin-top: 20px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    /*border: 1px solid deeppink;*/
+}
+
+.Backtohome {
+    width: 100px;
+    height: 40px;
+    bottom: 20px;
+    right: 20px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    background-color: #101824;
+    border-radius: 4px;
+}
+
+.Backtohome div {
+    width: 40px;
+    height: 32px;
+    margin-top: 5px;
+    display: flex;
+    background-color: #2461cc;
+    border-radius: 4px;
+}
+
+.left {
+    margin-left: 5px;
+}
+
+.right {
+    margin-right: 5px;
+}
+
+.left1 {
+    margin-left: 3px;
+}
+
+.Backtohome img {
+    width: 32px;
+    height: 32px;
+}
+
+.Backtohome p {
+    width: auto;
+    height: 20px;
+    margin-top: 9px;
+    margin-left: auto;
+    margin-right: auto;
+    /*border: 1px solid red;*/
+}
+
+@media screen and (max-width: 768px) {
+    .description {
+        width: 90%;
+        margin-left: 5%;
+    }
+
+    #main {
+        right: 5%;
+    }
+}
+
+@media screen and (max-width: 1429px) {
+    .Prevnext {
+        width: 90%;
+    }
+}
+
+
+
+/*@import "compass/css3";
+
+Mise en page du fond du site
+body{
+    width: 100%;
+    margin: 0;
+    padding: 0;
     font-family: Agency FB, sans-serif;
     font-size: 20px;
     color: white;
@@ -26,7 +333,7 @@ body{
     display: none;
 }
 
-/* Mise en page du background header */
+Mise en page du background header
 .background-header {
     width: 100%;
     height: 91px;
@@ -35,10 +342,10 @@ body{
     position: fixed;
     z-index: 1000;
     background-color: #282c34;
-    /*border: 1px solid white;*/
+    border: 1px solid white;
 }
 
-/* Mise en page du header contenant l'en tête du site */
+ Mise en page du header contenant l'en tête du site
 .header {
     width: 94%;
     height: 90px;
@@ -47,11 +354,11 @@ body{
     display: flex;
     top: 0;
     justify-content: space-between;
-    background-color: /*#1B1D22*/#282c34;
+    background-color: #1B1D22#282c34;
     border-bottom: 1px solid white;
 }
 
-/* Mise en page du bloc contenant le logo et le titre du site */
+ Mise en page du bloc contenant le logo et le titre du site
 .subtitle1 {
     width: auto;
     height: auto;
@@ -59,29 +366,29 @@ body{
     margin-bottom: 10px;
     margin-left: 30px;
     display: flex;
-    /*border: 1px solid blue;*/
-}
-
-/* Centrage verticale des div du bloc subtitle1 */
+    border: 1px solid blue;
+}*/
+/*
+Centrage verticale des div du bloc subtitle1
 .subtitle1 div{
     margin-top: auto;
     margin-bottom: auto;
-    /*border: 1px solid blue;*/
+    border: 1px solid blue;
 }
 
-/* Lien du bloc en blanc */
+Lien du bloc en blanc
 .subtitle1 a{
     margin-left: 10px;
     color: white;
 }
 
-/* Changement de la couleur du lien au passage de la souris */
+Changement de la couleur du lien au passage de la souris
 .subtitle1 a:hover{
     color: #7294E9;
     transition: 0.6s;
 }
 
-/* Mise en place de l'animation des titres du site */
+ Mise en place de l'animation des titres du site
 .FreeNote a, .log-in-animation a {
     color: white;
     text-decoration: none;
@@ -95,7 +402,7 @@ body{
     transition: color 1.2s;
 }
 
-/* Mise en place des titres avant des blocs le passage de la souris */
+Mise en place des titres avant des blocs le passage de la souris
 div.highlightTextIn a:before
 {
     position: absolute;
@@ -110,7 +417,7 @@ div.highlightTextIn a:before
     opacity: 0;
 }
 
-/* Mise en place des titres des blocs après le passage de la souris */
+Mise en place des titres des blocs après le passage de la souris
 div.highlightTextIn a:hover:after
 {
     position: absolute;
@@ -131,7 +438,7 @@ div.highlightTextIn a:hover:before
     opacity: 1;
 }
 
-/* Highlight text in  */
+ *//*Highlight text in
 div.highlightTextIn a
 {
     color: rgba(255, 255, 255, 1);
@@ -148,16 +455,16 @@ div.highlightTextIn a:before
     margin-top: 10px;
     margin-bottom: 10px;
     display: flex;
-    /*border: 1px solid blue;*/
+    border: 1px solid blue;
 }
 
 .sign-up div{
     margin-top: auto;
     margin-bottom: auto;
-    /*border: 1px solid blue;*/
-}
+    border: 1px solid blue;
+}*/
 
-.sign-up a{
+/*.sign-up a{
     margin-left: 10px;
     color: white;
 }
@@ -233,7 +540,7 @@ div.borderXwidth a:hover:before, div.borderXwidth a:hover:after
 {
     opacity: 1;
     width: 100%;
-}*/
+}
 
 .log-in {
     width: auto;
@@ -242,20 +549,20 @@ div.borderXwidth a:hover:before, div.borderXwidth a:hover:after
     margin-bottom: 10px;
     margin-right: 30px;
     display: flex;
-    /*border: 1px solid blue;*/
+    border: 1px solid blue;
 }
 
 .log-in div{
     margin-top: auto;
     margin-bottom: auto;
-    /*border: 1px solid blue;*/
+    border: 1px solid blue;
 }
 
 .log-in a{
     margin-left: 10px;
     color: white;
 }
-
+*//*
 .log-in a:hover{
     color: #7294E9;
     transition: 0.6s;
@@ -271,12 +578,12 @@ div.borderXwidth a:hover:before, div.borderXwidth a:hover:after
     display: block;
     z-index: 1;
     background-color: #282c34;
-    /*box-shadow: 2px 2px 1px 1px rgba(255, 255, 255, 0.2);*/
+    box-shadow: 2px 2px 1px 1px rgba(255, 255, 255, 0.2);
     border: 1px solid white;
     border-radius: 5px;
 }
-
-.description-subtitle {
+*/
+/*.description-subtitle {
     width: 240px;
     text-align: center;
     margin-left: auto;
@@ -304,5 +611,5 @@ div.borderXwidth a:hover:before, div.borderXwidth a:hover:after
     padding-right: 10px;
     text-align: justify;
 
-}
+}*/
 
