--- a/html/css/index.css
+++ b/html/css/index.css
@@ -30,50 +30,6 @@ body{
 
 input:focus {
     outline: none;
-
-}
-
-/* Mise en page du header contenant l'en tête du site */
-.header {
-    width: 94%;
-    height: 90px;
-    margin-left: 3%;
-    position: fixed;
-    display: flex;
-    top: 0;
-    justify-content: space-between;
-    background-color: /*#1B1D22*/#101824;
-    border-bottom: 1px solid white;
-}
-
-/* Mise en page du bloc contenant le logo et le titre du site */
-.subtitle1 {
-    width: auto;
-    height: auto;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    margin-left: 30px;
-    display: flex;
-    border: 1px solid blue;
-}
-
-/* Centrage verticale des div du bloc subtitle1 */
-.subtitle1 div{
-    margin-top: auto;
-    margin-bottom: auto;
-    /*border: 1px solid blue;*/
-}
-
-/* Lien du bloc en blanc */
-.subtitle1 a{
-    margin-left: 10px;
-    color: white;
-}
-
-/* Changement de la couleur du lien au passage de la souris */
-.subtitle1 a:hover{
-    color: #2461cc;
-    transition: 0.6s;
 }
 
 .contenu-navbar {
@@ -101,21 +57,46 @@ input:focus {
     height: auto;
     margin-top: 300px;
     margin-left: 10%;
+    padding-bottom: 30px;
     background-color: #101824;
     display: flex;
     flex-direction: column;
-    /*border: 1px solid deeppink;*/
+    /*border: 1px solid green;*/
+    border-radius: 5px;
+}
+
+.discussion1 {
+    width: 500px;
+    height: auto;
+    margin-top: auto;
+    padding-bottom: 30px;
+    background-color: #101824;
+    display: flex;
+    flex-direction: column;
+    /*border: 1px solid green;*/
+    border-radius: 5px;
+}
+
+.discussion2 {
+    width: 500px;
+    height: auto;
+    margin-top: auto;
+    padding-bottom: 30px;
+    background-color: #101824;
+    display: flex;
+    flex-direction: column;
+    /*border: 1px solid green;*/
     border-radius: 5px;
 }
 
 h1 {
-    padding-top: 20px;
-    margin-bottom: 30px;
+    padding-top: 10px;
+    margin-bottom: 20px;
     text-align: center;
     font-size: 28px;
 }
 
-.description-FreeNote {
+.description-FreeNote, .discussion1-FreeNote, .discussion2-FreeNote   {
     width: 90%;
     height: auto;
     margin-left: 5%;
@@ -128,7 +109,7 @@ h1 {
     border-radius: 4px;
 }
 
-.description-FreeNote p{
+.description-FreeNote p, .discussion1-FreeNote p, .discussion2-FreeNote p{
     text-align: justify;
     margin-left: 20px;
     margin-right: 20px;
@@ -195,7 +176,7 @@ h1 {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    position: absolute;
+    position: fixed; /* Stay in place */
     background-color: #101824;
     border-radius: 4px;
     transition: margin-right .5s; /* If you want a transition effect */
@@ -221,16 +202,58 @@ h1 {
 .discussion {
     width: auto;
     height: auto;
+    margin-top: 100px;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-between;
-    /*border: 1px solid deeppink;*/
+    border: 1px solid deeppink;
 }
 
 .discussion .description {
     margin-top: 100px;
     margin-left: 0px;
+}
+
+.rondvert {
+    width: 20px;
+    height: 20px;
+    margin-top: -30px;
+    margin-left: calc(95% - 20px);
+    margin-bottom: 40px;
+    border-radius: 50%;
+    background-color: green;
+}
+
+.rondrouge {
+    width: 20px;
+    height: 20px;
+    margin-top: -30px;
+    margin-left: calc(95% - 20px);
+    margin-bottom: 40px;
+    border-radius: 50%;
+    background-color: red;
+}
+
+.form {
+    width: 90%;
+    margin-left: 5%;
+    height: auto;
+    /*border: 1px solid red;*/
+}
+
+.submit {
+    width: 99%;
+    height: 40px;
+    /*margin-top: 10px;*/
+    font-family: Bebas;
+    margin-top: auto;
+    position: relative;
+    font-size: 18px;
+    color: white;
+    background-color: #2461cc;
+    border: none;
+    border-radius: 4px;
 }
 
 .Prevnext {
@@ -291,10 +314,6 @@ h1 {
 }
 
 @media screen and (max-width: 768px) {
-    .description {
-        width: 90%;
-        margin-left: 5%;
-    }
 
     #main {
         right: 5%;
@@ -303,6 +322,19 @@ h1 {
 
 @media screen and (max-width: 1429px) {
     .Prevnext {
+        width: 500px;
+    }
+
+    .description, .discussion {
         width: 90%;
+        margin-left: 5%;
+    }
+
+    .discussion1, .discussion2 {
+        width: 100%;
+    }
+
+    .discussion2 {
+        margin-top: 100px;
     }
 }
