--- a/html/css/signup.css
+++ b/html/css/signup.css
@@ -27,6 +27,68 @@ body{
     position: fixed;
 }
 
+/* The sidebar links */
+.sidebar a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+}
+
+/* When you mouse over the navigation links, change their color */
+.sidebar a:hover {
+    color: #f1f1f1;
+}
+
+/* Position and style the close button (top right corner) */
+.sidebar .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+}
+
+/* The button used to open the sidebar */
+.openbtn {
+    font-size: 20px;
+    cursor: pointer;
+    margin-top: 11px;
+    margin-right: 10px;
+    background-color: #2461cc;
+    color: white;
+    padding: 5px 10px 5px 10px;
+    border: none;
+    border-radius: 4px;
+}
+
+/* Style page content - use this if you want to push the page content to the right when you open the side navigation */
+#main {
+    width: 200px;
+    height: 60px;
+    top: 20px;
+    right: 20px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    position: absolute;
+    background-color: #101824;
+    border-radius: 4px;
+    transition: margin-right .5s; /* If you want a transition effect */
+}
+
+#main p {
+    width: auto;
+    height: 20px;
+    font-size: 18px;
+    margin-top: 18px;
+    margin-left: auto;
+    margin-right: auto;
+    /*border: 1px solid red;*/
+}
+
 .Title {
     width: 300px;
     height: auto;
@@ -59,64 +121,6 @@ h1 {
 .Title a:hover{
     color: #7294E9;
     transition: 0.6s;
-}
-
-.FreeNote a, .log-in-animation a {
-    color: white;
-    text-decoration: none;
-    padding: 10px 10px 10px 10px;
-    position: relative;
-    z-index: 0;
-    cursor: pointer;
-    font-family: Bebas, GeoSansLight;
-    font-size: 48px;
-    text-decoration: none;
-    transition: color 1.2s;
-}
-
-div.highlightTextIn a:before
-{
-    position: absolute;
-    color: white;
-    top: 0px;
-    left: 0px;
-    padding: 10px;
-    overflow: hidden;
-    content: attr(alt);
-    transition: all 1.2s;
-    transform: scale(1.2);
-    opacity: 0;
-}
-
-div.highlightTextIn a:hover:after
-{
-    position: absolute;
-    color: white;
-    top: 0px;
-    left: 0px;
-    padding: 10px;
-    overflow: hidden;
-    content: attr(alt);
-    transition: all 1.2s;
-    transform: scale(1.2);
-    opacity: 0;
-}
-
-div.highlightTextIn a:hover:before
-{
-    transform: scale(1.08);
-    opacity: 1;
-}
-
-/* Highlight text in  */
-div.highlightTextIn a
-{
-    color: rgba(255, 255, 255, 1);
-}
-
-div.highlightTextIn a:before
-{
-    transform: scale(1.6);
 }
 
 .container-form {
