--- a/html/css/index.css
+++ b/html/css/index.css
@@ -52,70 +52,6 @@ input:focus {
     transition: 0.6s;
 }
 
-.description {
-    width: 500px;
-    height: auto;
-    margin-top: 300px;
-    margin-left: 10%;
-    padding-bottom: 30px;
-    background-color: #101824;
-    display: flex;
-    flex-direction: column;
-    /*border: 1px solid green;*/
-    border-radius: 5px;
-}
-
-.discussion1 {
-    width: 500px;
-    height: auto;
-    margin-top: auto;
-    padding-bottom: 30px;
-    background-color: #101824;
-    display: flex;
-    flex-direction: column;
-    /*border: 1px solid green;*/
-    border-radius: 5px;
-}
-
-.discussion2 {
-    width: 500px;
-    height: auto;
-    margin-top: auto;
-    padding-bottom: 30px;
-    background-color: #101824;
-    display: flex;
-    flex-direction: column;
-    /*border: 1px solid green;*/
-    border-radius: 5px;
-}
-
-h1 {
-    padding-top: 10px;
-    margin-bottom: 20px;
-    text-align: center;
-    font-size: 28px;
-}
-
-.description-FreeNote, .discussion1-FreeNote, .discussion2-FreeNote   {
-    width: 90%;
-    height: auto;
-    margin-left: 5%;
-    margin-bottom: 40px;
-    font-family: calibri;
-    font-size: 18px;
-    color: white;
-    background-color: #080c10;
-    border: 1px solid #2461cc;
-    border-radius: 4px;
-}
-
-.description-FreeNote p, .discussion1-FreeNote p, .discussion2-FreeNote p{
-    text-align: justify;
-    margin-left: 20px;
-    margin-right: 20px;
-
-}
-
 /* The sidebar menu */
 .sidebar {
     height: 100%; /* 100% Full-height */
@@ -179,6 +115,7 @@ h1 {
     position: fixed; /* Stay in place */
     background-color: #101824;
     border-radius: 4px;
+    border: 1px solid #2461cc;
     transition: margin-right .5s; /* If you want a transition effect */
 }
 
@@ -196,6 +133,7 @@ h1 {
     width: 70%;
     margin-top: 0px;
     margin-left: 10%;
+    margin-bottom: 50px;
     /*border: 1px solid deeppink;*/
 }
 
@@ -207,12 +145,77 @@ h1 {
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-between;
-    border: 1px solid deeppink;
+    /*border: 1px solid deeppink;*/
 }
 
 .discussion .description {
     margin-top: 100px;
     margin-left: 0px;
+}
+
+
+.description {
+    width: 500px;
+    height: auto;
+    margin-top: 200px;
+    margin-left: calc(50% - 250px);
+    padding-bottom: 30px;
+    background-color: #101824;
+    display: flex;
+    flex-direction: column;
+    /*border: 1px solid green;*/
+    border-radius: 5px;
+}
+
+.discussion1 {
+    width: 500px;
+    height: auto;
+    margin-top: auto;
+    padding-bottom: 30px;
+    background-color: #101824;
+    display: flex;
+    flex-direction: column;
+    /*border: 1px solid green;*/
+    border-radius: 5px;
+}
+
+.discussion2 {
+    width: 500px;
+    height: auto;
+    margin-top: 100px;
+    padding-bottom: 30px;
+    background-color: #101824;
+    display: flex;
+    flex-direction: column;
+    /*border: 1px solid green;*/
+    border-radius: 5px;
+}
+
+h1 {
+    padding-top: 10px;
+    margin-bottom: 20px;
+    text-align: center;
+    font-size: 28px;
+}
+
+.description-FreeNote, .discussion1-FreeNote, .discussion2-FreeNote   {
+    width: 90%;
+    height: auto;
+    margin-left: 5%;
+    margin-bottom: 40px;
+    font-family: calibri;
+    font-size: 18px;
+    color: white;
+    background-color: #080c10;
+    border: 1px solid #2461cc;
+    border-radius: 4px;
+}
+
+.description-FreeNote p, .discussion1-FreeNote p, .discussion2-FreeNote p{
+    text-align: justify;
+    margin-left: 20px;
+    margin-right: 20px;
+
 }
 
 .rondvert {
@@ -278,13 +281,18 @@ h1 {
     border-radius: 4px;
 }
 
-.Backtohome div {
+.Backtohome div, .lespages div {
     width: 40px;
     height: 32px;
     margin-top: 5px;
     display: flex;
     background-color: #2461cc;
     border-radius: 4px;
+}
+
+.lespages div {
+    width: 50px;
+    text-align: center;
 }
 
 .left {
@@ -297,6 +305,22 @@ h1 {
 
 .left1 {
     margin-left: 3px;
+}
+
+.lespages  {
+    width: 150px;
+    height: 40px;
+    margin-top: 10px;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    background-color: #101824;
+    border-radius: 4px;
+    text-align: center;
+}
+
+.lespages a {
+    text-decoration: none;
 }
 
 .Backtohome img {
@@ -314,27 +338,18 @@ h1 {
 }
 
 @media screen and (max-width: 768px) {
-
     #main {
         right: 5%;
     }
 }
 
-@media screen and (max-width: 1429px) {
-    .Prevnext {
-        width: 500px;
+@media screen and (max-width: 1436px) {
+    .description,.container-discussion {
+        width: 70%;
+        margin-left: 15%;
     }
 
-    .description, .discussion {
-        width: 90%;
-        margin-left: 5%;
-    }
-
-    .discussion1, .discussion2 {
+    .discussion, .discussion1, .discussion2, .Prevnext {
         width: 100%;
-    }
-
-    .discussion2 {
-        margin-top: 100px;
     }
 }
