--- a/html/css/login.css
+++ b/html/css/login.css
@@ -62,6 +62,7 @@ input:focus {
     background-color: #101824;
     overflow-x: hidden; /* Disable horizontal scroll */
     padding-top: 60px; /* Place content 60px from the top */
+    border-left: 1px solid #2461cc;
     transition: 0.5s; /* 0.5 second transition effect to slide in the sidebar */
 }
 
@@ -114,6 +115,7 @@ input:focus {
     position: absolute;
     background-color: #101824;
     border-radius: 4px;
+    border: 1px solid #2461cc;
     transition: margin-right .5s; /* If you want a transition effect */
 }
 
@@ -381,7 +383,7 @@ h4 {
     /*border: 1px solid white;*/
 }
 
-.Backtohome {
+#Backtohome {
     width: 200px;
     height: 60px;
     right: 20px;
@@ -393,9 +395,10 @@ h4 {
     background-color: #101824;
     border: 1px solid #2461cc;
     border-radius: 4px;
+    transition: margin-right .5s; /* If you want a transition effect */
 }
 
-.Backtohome div {
+#Backtohome div {
     width: 50px;
     height: 40px;
     margin-top: 10px;
@@ -405,13 +408,13 @@ h4 {
     border-radius: 4px;
 }
 
-.Backtohome img {
+#Backtohome img {
     width: 40px;
     height: 40px;
     margin-left: 5px;
 }
 
-.Backtohome p {
+#Backtohome p {
     width: auto;
     height: 20px;
     margin-top: 18px;
@@ -445,7 +448,7 @@ h4 {
 
     }
 
-    .Backtohome {
+    #Backtohome {
         right: 5%;
     }
 
