--- a/html/css/index.css
+++ b/html/css/index.css
@@ -5,7 +5,7 @@ body{
     width: 100%;
     margin: 0;
     padding: 0;
-    font-family: Bebas, sans-serif;
+    font-family: 'Staatliches', cursive;
     font-size: 20px;
     color: white;
     position: absolute;
@@ -52,70 +52,6 @@ input:focus {
     transition: 0.6s;
 }
 
-.description {
-    width: 500px;
-    height: auto;
-    margin-top: 300px;
-    margin-left: 10%;
-    padding-bottom: 30px;
-    background-color: #101824;
-    display: flex;
-    flex-direction: column;
-    /*border: 1px solid green;*/
-    border-radius: 5px;
-}
-
-.discussion1 {
-    width: 500px;
-    height: auto;
-    margin-top: auto;
-    padding-bottom: 30px;
-    background-color: #101824;
-    display: flex;
-    flex-direction: column;
-    /*border: 1px solid green;*/
-    border-radius: 5px;
-}
-
-.discussion2 {
-    width: 500px;
-    height: auto;
-    margin-top: auto;
-    padding-bottom: 30px;
-    background-color: #101824;
-    display: flex;
-    flex-direction: column;
-    /*border: 1px solid green;*/
-    border-radius: 5px;
-}
-
-h1 {
-    padding-top: 10px;
-    margin-bottom: 20px;
-    text-align: center;
-    font-size: 28px;
-}
-
-.description-FreeNote, .discussion1-FreeNote, .discussion2-FreeNote   {
-    width: 90%;
-    height: auto;
-    margin-left: 5%;
-    margin-bottom: 40px;
-    font-family: calibri;
-    font-size: 18px;
-    color: white;
-    background-color: #080c10;
-    border: 1px solid #2461cc;
-    border-radius: 4px;
-}
-
-.description-FreeNote p, .discussion1-FreeNote p, .discussion2-FreeNote p{
-    text-align: justify;
-    margin-left: 20px;
-    margin-right: 20px;
-
-}
-
 /* The sidebar menu */
 .sidebar {
     height: 100%; /* 100% Full-height */
@@ -127,6 +63,7 @@ h1 {
     background-color: #101824;
     overflow-x: hidden; /* Disable horizontal scroll */
     padding-top: 60px; /* Place content 60px from the top */
+    border-left: 1px solid #2461cc;
     transition: 0.5s; /* 0.5 second transition effect to slide in the sidebar */
 }
 
@@ -179,6 +116,7 @@ h1 {
     position: fixed; /* Stay in place */
     background-color: #101824;
     border-radius: 4px;
+    border: 1px solid #2461cc;
     transition: margin-right .5s; /* If you want a transition effect */
 }
 
@@ -196,23 +134,88 @@ h1 {
     width: 70%;
     margin-top: 0px;
     margin-left: 10%;
+    margin-bottom: 50px;
     /*border: 1px solid deeppink;*/
 }
 
 .discussion {
     width: auto;
     height: auto;
-    margin-top: 100px;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-between;
-    border: 1px solid deeppink;
+    /*border: 1px solid deeppink;*/
 }
 
 .discussion .description {
     margin-top: 100px;
     margin-left: 0px;
+}
+
+
+.description {
+    width: 500px;
+    height: auto;
+    margin-top: 200px;
+    margin-left: calc(50% - 250px);
+    padding-bottom: 30px;
+    background-color: #101824;
+    display: flex;
+    flex-direction: column;
+    /*border: 1px solid green;*/
+    border-radius: 5px;
+}
+
+.discussion1 {
+    width: 500px;
+    height: auto;
+    margin-top: 100px;;
+    padding-bottom: 30px;
+    background-color: #101824;
+    display: flex;
+    flex-direction: column;
+    /*border: 1px solid green;*/
+    border-radius: 5px;
+}
+
+.discussion2 {
+    width: 500px;
+    height: auto;
+    margin-top: 100px;
+    padding-bottom: 30px;
+    background-color: #101824;
+    display: flex;
+    flex-direction: column;
+    /*border: 1px solid green;*/
+    border-radius: 5px;
+}
+
+h1 {
+    padding-top: 10px;
+    margin-bottom: 20px;
+    text-align: center;
+    font-size: 28px;
+}
+
+.description-FreeNote, .discussion1-FreeNote, .discussion2-FreeNote   {
+    width: 90%;
+    height: auto;
+    margin-left: 5%;
+    margin-bottom: 40px;
+    font-family: calibri;
+    font-size: 18px;
+    color: white;
+    background-color: #080c10;
+    border: 1px solid #2461cc;
+    border-radius: 4px;
+}
+
+.description-FreeNote p, .discussion1-FreeNote p, .discussion2-FreeNote p{
+    text-align: justify;
+    margin-left: 20px;
+    margin-right: 20px;
+
 }
 
 .rondvert {
@@ -242,11 +245,41 @@ h1 {
     /*border: 1px solid red;*/
 }
 
+.like {
+    width: auto;
+    margin-left: 55%;
+    margin-bottom: 20px;
+    height: auto;
+    /*border: 1px solid blue;*/
+}
+
+.like p {
+    width: auto;
+    margin-top: 2px;
+    margin-right: 5px;
+    float: right;
+    font-size: 16px;
+    color: #818283;
+    /*border: 1px solid blue;*/
+}
+
+.submit1 {
+    width: 100%;
+    height: 40px;
+    margin-top: -20px;
+    font-family: 'Staatliches', cursive;
+    font-size: 18px;
+    color: white;
+    background-color: #2461cc;
+    border: none;
+    border-radius: 4px;
+}
+
 .submit {
     width: 99%;
     height: 40px;
     /*margin-top: 10px;*/
-    font-family: Bebas;
+    font-family: 'Staatliches', cursive;
     margin-top: auto;
     position: relative;
     font-size: 18px;
@@ -268,7 +301,7 @@ h1 {
 
 .Backtohome {
     width: 100px;
-    height: 40px;
+    height: 44px;
     bottom: 20px;
     right: 20px;
     display: flex;
@@ -278,10 +311,10 @@ h1 {
     border-radius: 4px;
 }
 
-.Backtohome div {
+.Backtohome div, .lespages div {
     width: 40px;
     height: 32px;
-    margin-top: 5px;
+    margin-top: 6px;
     display: flex;
     background-color: #2461cc;
     border-radius: 4px;
@@ -299,6 +332,42 @@ h1 {
     margin-left: 3px;
 }
 
+.lespages  {
+    width: auto;
+    height: 44px;
+    padding-left: 10px;
+    padding-right: 10px;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    background-color: #101824;
+    border-radius: 4px;
+    text-align: center;
+}
+
+.lespages div {
+    height: 28px;
+    margin-top: 7px;
+    padding-top: 2px;
+    width: auto;
+    padding-left: 10px;
+    padding-right: 10px;
+    text-align: center;
+}
+
+.lespages a {
+    text-decoration: none;
+}
+
+.lespages p {
+    width: auto;
+    height: 20px;
+    margin-top: 9px;
+    padding-left: 1px;
+    padding-right: 10px;
+    /*border: 1px solid red;*/
+}
+
 .Backtohome img {
     width: 32px;
     height: 32px;
@@ -314,27 +383,18 @@ h1 {
 }
 
 @media screen and (max-width: 768px) {
-
     #main {
         right: 5%;
     }
 }
 
-@media screen and (max-width: 1429px) {
-    .Prevnext {
-        width: 500px;
+@media screen and (max-width: 1436px) {
+    .description,.container-discussion {
+        width: 70%;
+        margin-left: 15%;
     }
 
-    .description, .discussion {
-        width: 90%;
-        margin-left: 5%;
-    }
-
-    .discussion1, .discussion2 {
+    .discussion, .discussion1, .discussion2, .Prevnext {
         width: 100%;
-    }
-
-    .discussion2 {
-        margin-top: 100px;
     }
 }
