--- a/html/css/discussions.css
+++ b/html/css/discussions.css
@@ -187,7 +187,7 @@ h5 {
 .container-discussion {
     width: 500px;
     height: auto;
-    margin-top: 100px;
+    margin-top: 200px;
     margin-left: calc(50% - 250px);
     margin-bottom: 50px;
     display: flex;
@@ -270,7 +270,7 @@ h5 {
 .container-chat-global {
     width: 500px;
     height: auto;
-    margin-top: 10%;
+    margin-top: 200px;
     margin-left: 10%;
     margin-bottom: 30px;
     padding-bottom: 10px;
@@ -530,6 +530,11 @@ form a {
         width: 90%;
         margin-left: 5%;
     }
+
+    .container-chat-global, .container-discussion {
+        margin-top: 125px;
+    }
+
     .container-all {
         width: 100%;
     }
